--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -3,5 +3,5 @@
 {% block title %}accueil soglamchic{% endblock %}
 
 {% block body %}
-accueil soglamchic
+accueil soglamchic <i class="far fa-laugh-wink"></i>
 {% endblock %}
