--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -2,9 +2,11 @@
   <a class="navbar-brand" href={{path("acceuil")}}>Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
+
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
+      {% if is_granted('ROLE_ADMIN') %}
       <li class="nav-item active">
         <a class="nav-link" href={{path("acceuil")}}>acceuil</a>
       </li>
@@ -17,6 +19,7 @@
       <li class="nav-item">
         <a class="nav-link" href={{path("app_login")}} >connexion</a>
       </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
